[gd_scene load_steps=47 format=3 uid="uid://bus1pf57a3are"]

[ext_resource type="Texture2D" uid="uid://dfafn3siskmfl" path="res://assets/sprites/knight.png" id="1_0isxx"]
[ext_resource type="Script" uid="uid://bsmhbwiw47ulw" path="res://wizard.gd" id="1_xxhrx"]
[ext_resource type="PackedScene" uid="uid://dcvapvcrjnb6t" path="res://components/health_component.tscn" id="3_xo1iy"]
[ext_resource type="PackedScene" uid="uid://b2wpshvikyg7k" path="res://components/hurtbox_component.tscn" id="4_wsbrn"]
[ext_resource type="PackedScene" uid="uid://je1e62lkoov4" path="res://components/shooting_component.tscn" id="5_wsbrn"]
[ext_resource type="PackedScene" uid="uid://b1bwrv6bltw1" path="res://components/inventory_component.tscn" id="6_rsvjg"]
[ext_resource type="AudioStream" uid="uid://bu3pptlwlg5j8" path="res://assets/sounds/jump.wav" id="8_2tmfn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xxhrx"]
atlas = ExtResource("1_0isxx")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_34mad"]
atlas = ExtResource("1_0isxx")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo1iy"]
atlas = ExtResource("1_0isxx")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsbrn"]
atlas = ExtResource("1_0isxx")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsvjg"]
atlas = ExtResource("1_0isxx")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_74p71"]
atlas = ExtResource("1_0isxx")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tmfn"]
atlas = ExtResource("1_0isxx")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd25x"]
atlas = ExtResource("1_0isxx")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_20pe4"]
atlas = ExtResource("1_0isxx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_honri"]
atlas = ExtResource("1_0isxx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_japat"]
atlas = ExtResource("1_0isxx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0mtd"]
atlas = ExtResource("1_0isxx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5j14"]
atlas = ExtResource("1_0isxx")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddiug"]
atlas = ExtResource("1_0isxx")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpxa5"]
atlas = ExtResource("1_0isxx")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8byd"]
atlas = ExtResource("1_0isxx")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlar0"]
atlas = ExtResource("1_0isxx")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_juihr"]
atlas = ExtResource("1_0isxx")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnqjn"]
atlas = ExtResource("1_0isxx")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcxhb"]
atlas = ExtResource("1_0isxx")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_la5vo"]
atlas = ExtResource("1_0isxx")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4muko"]
atlas = ExtResource("1_0isxx")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_camet"]
atlas = ExtResource("1_0isxx")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yrku"]
atlas = ExtResource("1_0isxx")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_05tbc"]
atlas = ExtResource("1_0isxx")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxciu"]
atlas = ExtResource("1_0isxx")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_165cv"]
atlas = ExtResource("1_0isxx")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfbqg"]
atlas = ExtResource("1_0isxx")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4oej"]
atlas = ExtResource("1_0isxx")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rb1p"]
atlas = ExtResource("1_0isxx")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq2g1"]
atlas = ExtResource("1_0isxx")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8ldh"]
atlas = ExtResource("1_0isxx")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8sfb"]
atlas = ExtResource("1_0isxx")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_15ykp"]
atlas = ExtResource("1_0isxx")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jml44"]
atlas = ExtResource("1_0isxx")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk22g"]
atlas = ExtResource("1_0isxx")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_g70ix"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxhrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34mad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo1iy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsbrn")
}],
"loop": true,
"name": &"death",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsvjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74p71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tmfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd25x")
}],
"loop": true,
"name": &"hit",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_20pe4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_honri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_japat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0mtd")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5j14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddiug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpxa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8byd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlar0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_juihr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnqjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcxhb")
}],
"loop": true,
"name": &"roll",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_la5vo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4muko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_camet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yrku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05tbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxciu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_165cv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfbqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4oej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rb1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq2g1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8ldh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8sfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15ykp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jml44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk22g")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xxhrx"]
radius = 6.0
height = 18.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_74p71"]
properties/0/path = NodePath(".:syncPos")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="Wizard" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_xxhrx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_g70ix")
animation = &"roll"
autoplay = "idle"
frame_progress = 0.0865031

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_xxhrx")

[node name="jump_buffer" type="Timer" parent="."]

[node name="wall_check_left" type="RayCast2D" parent="."]
position = Vector2(0, 4)
target_position = Vector2(-12, 0)

[node name="wall_check_right" type="RayCast2D" parent="."]
position = Vector2(0, 4)
target_position = Vector2(12, 0)

[node name="HealthComponent" parent="." instance=ExtResource("3_xo1iy")]

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("healthComponent") instance=ExtResource("4_wsbrn")]
healthComponent = NodePath("../HealthComponent")

[node name="Collision" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_xxhrx")

[node name="ShootingComponent" parent="." node_paths=PackedStringArray("inventory") instance=ExtResource("5_wsbrn")]
position = Vector2(0, 4)
inventory = NodePath("../InventoryComponent")

[node name="InventoryComponent" parent="." instance=ExtResource("6_rsvjg")]

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_2tmfn")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_74p71")
